<resources>
    <string name="app_name">Кардиомагнил — здоровое сердце</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_sliding_menu">SlidingMenuActivity</string>
    <string name="risk_analysis">Анализ усугубляющих факторов</string>
    <string name="score_procam">на основании шкал &lt;a href="http://cvdrisk.nhlbi.nih.gov/">SCORE &lt;/a>и &lt;a href="http://www.chd-taskforce.com/procam_interactive.html">PROCAM&lt;/a></string>
    <string name="patient_history">История пациента</string>
    <string name="daily_ration">Дневной рацион</string>
    <string name="tab_step_one">Шаг 1\nДанные пациента</string>
    <string name="tab_step_two">Шаг 2\nИстория пациента</string>
    <string name="tab_step_three">Шаг 3\nДневной рацион</string>
    <string name="step_two_patient_history">Шаг 2. История пациента</string>
    <string name="step_three_daily_ration">Шаг 3. Дневной рацион</string>
    <string name="get_results">Получить результаты</string>
    <string name="enter_birth_date">Введите дату рождения</string>
    <string name="error_birth_date">Вы ввели недопустимое значение даты</string>
    <string name="results">Результаты</string>
    <string name="results_smoking">Курение</string>
    <string name="results_physical_activity">Физическая активность</string>
    <string name="results_main_risks">Основные риски</string>
    <string name="results_diet">Диета</string>
    <string name="results_error">Не удалось получить результат.\nПожалуйста, попробуйте пройти тест позже.</string>
    <string name="error_test_pressure">Давление может иметь значение от %1$d до %2$d.</string>
    <string name="error_test_activity">Физическая активность может иметь значение от %1$d до %2$d.</string>
    <string name="error_test_age">Исправьте значение возраста.</string>
    <string name="error_test_growth">Рост может иметь значение от %1$d до %2$d.</string>
    <string name="error_test_weight">Вес может иметь значение от %1$d до %2$d.</string>
    <string name="error_test_cholesterol_level">Уровень общего холестерина может иметь значение от %1$d до %2$d.\nОтметьте \"Не знаю\", если уровень не известен.</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="fulfilled">Выполнено</string>
    <string name="not_fulfilled">Не выполнено</string>
    <string name="progress_dialog_text">Подождите...</string>
    <string name="complete_all_fields">Пожалуйста, заполните все поля</string>
    <string name="complete_required_fields">Пожалуйста, заполните необходимые поля</string>
    <string name="press_back_twice">Для выхода из приложения нажмите \'Back\' дважды</string>
    <string name="information">Дополнительная информация</string>
    <string name="not_specified">Не указано</string>
    <string name="error_occurred">Произошла ошибка.</string>
    <string name="error_authorization">Произошла ошибка во время авторизации.</string>
    <string name="error_getting_user_data">Произошла ошибка при получении данных пользователя.</string>
    <string name="error_registration">Произошла ошибка во время регистрации.</string>
    <string name="error_get_test_results">Произошла ошибка во время получения результатов теста.</string>
    <string name="error_tets_already_passed">Вы уже проходили тест.\nТест проходится раз в месяц.\nПопробуйте позже.</string>
    <string name="error_tets_username_not_unique">Вы уже регистрировались, пожалуйста вернитесь к входу.\nТам же вы можете восстановить пароль.</string>
    <string name="error_user_not_found">Такой пользователь не найден.\nУбедитесь, что вы правильно ввели электронный адрес.</string>
    <string name="error_user_already_exist">Такой пользователь уже существует.\nУбедитесь, что вы правильно ввели электронный адрес.</string>
    <string name="error_password_already_requested">Пароль уже был запрошен.</string>
    <string name="results_recomendations">Рекомендации</string>
    <string name="general">Общее</string>
    <string name="impact">Влияние на повседневную жизнь</string>
    <string name="symptoms">Симптомы</string>
    <string name="treatment">Лечение и профилактика</string>
    <string name="welcome_1">Добро пожаловать в приложение\n"Здоровое сердце",\nсозданное компанией ТАКЕДА</string>
    <string name="welcome_2">Вы сможете оценить состояние сердечно-сосудистой системы\nи факторы, влияющие на ее работу,\nпосле регистрации и прохождения теста.</string>
    <string name="swipe">Войдите</string>
    <string name="three_minutes">3 минуты до начала работы приложения</string>
    <string name="entry">Вход</string>
    <string name="restoring_password">Восстановление пароля</string>
    <string name="login_email">e-mail</string>
    <string name="password">пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="restore">Восстановить</string>
    <string name="restored_successfully">Новый пароль выслан.\nПроверьте почту.</string>
    <string name="if_no_account">Если у вас до сих пор нет логина,\nпожалуйста, зарегистрируйтесь:</string>
    <string name="register">Регистрация</string>
    <string name="restoring_info">Информация для восстановления пароля будет выслана на указанный email.</string>
    <string name="restoring_info_sent">Информация для восстановления пароля была выслана на указанный email.</string>
    <string name="bottom_login">Регистрация</string>
    <string name="two_minutes">2 минуты до начала работы приложения</string>
    <string name="menu_back">Назад</string>
    <string name="menu_done">Готово</string>
    <string name="menu_item_main">Главная</string>
    <string name="menu_item_risk_analysis">Анализ усугубляющих факторов</string>
    <string name="menu_item_add_pills">Добавить</string>
    <string name="menu_item_journal">Дневник</string>
    <string name="menu_item_search_institutions">Поиск учреждений</string>
    <string name="menu_item_information">Информация</string>
    <string name="menu_item_settings">Настройки</string>
    <string name="menu_item_analysis_results">Как модифицировать усугубляющие факторы?</string>
    <string name="menu_item_useful_to_know">Полезно знать</string>
    <string name="menu_item_reports">Отчеты</string>
    <string name="menu_item_patient_data">Данные пациента</string>
    <string name="menu_item_patient_history">История пациента</string>
    <string name="menu_item_daily_ration">Дневной рацион</string>
    <string name="header_registration">Регистрация</string>
    <string name="is_a_doctor">Вы являетесь врачом?</string>
    <string name="use_social">Использовать аккаунт социальных сетей:</string>
    <string name="use_social_used">Уже привязанные социальные сети:</string>
    <string name="your_details">Ваши данные</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="registration_email">email</string>
    <string name="region">Регион</string>
    <string name="birth_date">Дата рождения</string>
    <string name="select_birth_date">Дата рождения</string>
    <string name="create_password">Создание пароля</string>
    <string name="enter_the_password">Укажите пароль</string>
    <string name="enter_the_password_again">Пароль еще раз</string>
    <string name="confirmation">Подтверждение</string>
    <string name="agree_to_processing">Согласен на обработку персональных данных</string>
    <string name="agree_to_receive">Согласен получать информацию по email</string>
    <string name="agree_that_advises">Согласен с тем, что вся информация носит ознакомительный характер</string>
    <string name="registration">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="additional_information">Дополнительная информация</string>
    <string name="specialization_name">Специализация</string>
    <string name="specialization_institution_name">Учебное заведение</string>
    <string name="specialization_institution_address">Адрес</string>
    <string name="specialization_institution_town">Город</string>
    <string name="specialization_institution_street">Улица</string>
    <string name="specialization_institution_house">Дом</string>
    <string name="specialization_institution_phone">Телефон</string>
    <string name="specialization_graduation_date">Год окончания</string>
    <string name="specialization_experience_years">Стаж</string>
    <string name="must_be_selected">Необходимо выбрать</string>
    <string name="can_not_be_empty">Не может быть пустым</string>
    <string name="must_match">Должны совпадать</string>
    <string name="user_not_found">Пользователь не найден.</string>
    <string name="zero_percent">0%</string>
    <string name="index_recommendations">Ваш индекс модификации усугублящих факторов на этой неделе</string>
    <string name="physical_load">Физическая нагрузка</string>
    <string name="eaten_today">Вы соблюдаете диету?</string>
    <string name="my_recommendations">Мои модификаторы усугубляющих факторов</string>
    <string name="my_success">Мои успехи</string>
    <string name="consolidated_report">Сводный отчет</string>
    <string name="go_to_website">Переход на сайт</string>
    <string name="choose_medical_institution">Подобрать мед. учереждение</string>
    <string name="pills">Таблетки</string>
    <string name="medication_reminders">Мои напоминания о лекарствах</string>
    <string name="pills_info">Сюда вы можете включить то, что рекомендовано врачом.</string>
    <string name="visit_doctor">Сходить к врачу</string>
    <string name="consult_a_doctor">Вам следует обратиться в лечебно-профилактические учреждения для назначения правильного для вас лечения</string>
    <string name="add">Добавить</string>
    <string name="detail">Подробно</string>
    <string name="pill_name">Название</string>
    <string name="pill_number">Количество</string>
    <string name="pill_frequency">Частота приема</string>
    <string name="pill_hours">Время приема</string>
    <string name="pill_start_date">Дата начала</string>
    <string name="pill_end_date">Дата завершения</string>
    <string name="pill_condition">Состояние</string>
    <string name="pill_created">Создано успешно</string>
    <string name="pill_updated">Обновлено успешно</string>
    <string name="pill_deleted">Удалено успешно</string>
    <string name="daily">Ежедневно</string>
    <string name="every_2_days">Раз в два дня</string>
    <string name="delete_pill">Удалить %s?</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="report_an_incident">Сообщить об инциденте?</string>
    <string name="journal">Дневник</string>
    <string name="journal_new">Новые</string>
    <string name="journal_filled">Заполненные</string>
    <string name="exercise_stress">Физическая нагрузка</string>
    <string name="enter_weight">Внесите вес</string>
    <string name="enter_pressure">Внесите давление</string>
    <string name="enter_cholesterol">Внесите холестерин</string>
    <string name="refresh_pills">Пожалуйста, обновите список таблеток</string>
    <string name="pills_taken">Вы приняли таблетки?</string>
    <string name="setting">Настройка</string>
    <string name="application_settings">Настройки приложения</string>
    <string name="delete_all_reports">Удалить все отчеты</string>
    <string name="must_be_password">Для операции необходимо пароль</string>
    <string name="exit">Выход</string>
    <string name="incident_occurred">У меня произошел инцидент</string>
    <string name="first_aid">Первая помощь</string>
    <string name="recognize_infarction_apoplexy">Как распознать инфаркт-инсульт</string>
    <string name="lifestyle">Образ жизни</string>
    <string name="infarction">Инфаркт</string>
    <string name="apoplexy">Инсульт</string>
    <string name="shunting">Коронарное шунтирование</string>
</resources>