<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/ca_space_medium"
    android:paddingRight="@dimen/ca_space_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ca_plate_medium"
        android:gravity="center_vertical"
        android:text="@string/specialization_details"
        android:textColor="@color/ca_text_main_41"
        android:textSize="@dimen/ca_text_size_medium" />

    <EditText
        android:id="@+id/editTextSpecializationName"
        style="@style/EditText"
        android:hint="@string/specialization_name"
        android:inputType="textCapSentences" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

    <EditText
        android:id="@+id/editTextSpecializationInstitutionName"
        style="@style/EditText"
        android:hint="@string/specialization_institution_name"
        android:inputType="textCapSentences" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

    <EditText
        android:id="@+id/editTextSpecializationInstitutionAddress"
        style="@style/EditText"
        android:hint="@string/specialization_institution_address"
        android:inputType="textPostalAddress" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

    <EditText
        android:id="@+id/editTextSpecializationInstitutionPhone"
        style="@style/EditText"
        android:hint="@string/specialization_institution_phone"
        android:inputType="phone" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

    <EditText
        android:id="@+id/editTextSpecializationGraduationDate"
        style="@style/EditText"
        android:hint="@string/specialization_graduation_date"
        android:inputType="date" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

    <EditText
        android:id="@+id/editTextSpecializationExperienceYears"
        style="@style/EditText"
        android:hint="@string/specialization_experience_years"
        android:inputType="numberDecimal" />

    <include layout="@layout/ca_layout_vertical_gap_space_small" />

</LinearLayout>