<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/plate_medium"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="3">

    <TextView
        android:id="@+id/textViewStepOne"
        style="@style/TextViewTestTab"
        android:text="@string/tab_step_one" />

    <View style="@style/divider_normal_1_8" />

    <TextView
        android:id="@+id/textViewStepTwo"
        style="@style/TextViewTestTab"
        android:text="@string/tab_step_two" />

    <View style="@style/divider_normal_1_8" />

    <TextView
        android:id="@+id/textViewStepThree"
        style="@style/TextViewTestTab"
        android:text="@string/tab_step_three" />

</LinearLayout>