<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View style="@style/divider_normal_1_5" />

    <TextView
        android:id="@+id/textViewInfarction"
        style="@style/TextViewItem"
        android:gravity="center"
        android:text="@string/infarction" />

    <View style="@style/divider_normal_1_5" />

    <TextView
        android:id="@+id/textViewApoplexy"
        style="@style/TextViewItem"
        android:gravity="center"
        android:text="@string/apoplexy" />

    <View style="@style/divider_normal_1_5" />

    <TextView
        android:id="@+id/textViewShunting"
        style="@style/TextViewItem"
        android:gravity="center"
        android:text="@string/shunting" />

    <View style="@style/divider_normal_1_5" />

</LinearLayout>