<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/ca_space_medium"
    android:paddingRight="@dimen/ca_space_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ca_plate_medium"
        android:gravity="center_vertical"
        android:text="@string/confirmation"
        android:textColor="@color/ca_text_main_41"
        android:textSize="@dimen/ca_text_size_medium" />

    <CheckBox
        android:id="@+id/checkBoxAgreeToProcessing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ca_space_xlarge"
        android:text="@string/agree_to_processing"
        android:textColor="@color/ca_text_main_41"
        android:textSize="@dimen/ca_text_size_small" />

    <CheckBox
        android:id="@+id/checkBoxAgreeToReceive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ca_space_xlarge"
        android:text="@string/agree_to_receive"
        android:textColor="@color/ca_text_main_41"
        android:textSize="@dimen/ca_text_size_small" />

    <CheckBox
        android:id="@+id/checkBoxAgreeThatAdvises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ca_space_xlarge"
        android:text="@string/agree_that_advises"
        android:textColor="@color/ca_text_main_41"
        android:textSize="@dimen/ca_text_size_small" />

</LinearLayout>