<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTitle"
            android:text="@string/entry" />

        <View style="@style/gap_vertical_space_xsmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/plate_medium"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/text_main_38"
                android:textColorHint="@color/text_main_38_hint"
                android:textSize="@dimen/text_size_xlarge">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/plate_medium"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_main_38"
                android:textColorHint="@color/text_main_38_hint"
                android:textSize="@dimen/text_size_xlarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutPerformRestore"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/plate_medium"
            android:layout_gravity="right"
            android:gravity="right|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/selector_clickable_text_38"
                android:textSize="@dimen/text_size_small" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_small_dark_right" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonEnter"
            style="@style/button_main_short"
            android:text="@string/enter" />

        <View style="@style/gap_vertical_space_xsmall" />

        <include layout="@layout/layout_socials" />

        <View style="@style/gap_vertical_space_xsmall" />

        <TextView
            android:id="@+id/textViewIfNoAccoun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/if_no_account"
            android:textColor="@color/text_main_38"
            android:textSize="@dimen/text_size_small" />

        <View style="@style/gap_vertical_space_xsmall" />

        <Button
            android:id="@+id/buttonRegister"
            style="@style/button_main_long"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>