<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cm_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ca_plate_medium"
        android:gravity="center"
        android:text="@string/infarction"
        android:background="@drawable/ca_selector_bottom_and_top_border"
        style="@style/TextViewMedium37"
        android:paddingLeft="@dimen/ca_space_medium"
        android:paddingRight="@dimen/ca_space_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ca_plate_medium"
        android:gravity="center"
        android:text="@string/apoplexy"
        android:background="@drawable/ca_selector_bottom_border"
        style="@style/TextViewMedium37"
        android:paddingLeft="@dimen/ca_space_medium"
        android:paddingRight="@dimen/ca_space_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ca_plate_medium"
        android:gravity="center"
        android:text="@string/shunting"
        android:background="@drawable/ca_selector_bottom_border"
        style="@style/TextViewMedium37"
        android:paddingLeft="@dimen/ca_space_medium"
        android:paddingRight="@dimen/ca_space_medium" />

</LinearLayout>