<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewTop"
            android:text="@string/information" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/plate_large"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/first_aid"
            android:textColor="@color/text_main_48"
            android:textSize="@dimen/text_size_xlarge" />

    </LinearLayout>

    <include
        android:id="@+id/textViewBottom"
        layout="@layout/layout_bottom_contraindications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/textViewBottom"
        android:layout_below="@id/linearLayoutTop"
        android:layout_gravity="center_horizontal"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/divider_normal_1_5" />

            <TextView
                android:id="@+id/textViewSettingsEmail"
                style="@style/TextViewItemDrawableRR"
                android:text="@string/recognize_infarction_apoplexy" />

            <View style="@style/divider_normal_1_5" />

            <TextView
                android:id="@+id/textViewLifestyle"
                style="@style/TextViewItemDrawableRR"
                android:text="@string/lifestyle" />

            <View style="@style/divider_normal_1_5" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>